setting/ubuntu_setting/etc/iptables.rules
# Generated by iptables-save v1.4.12 on Tue Jan 14 15:03:16 2014
*filter
:INPUT DROP [30:3498]
:FORWARD DROP [0:0]
:OUTPUT DROP [2:80]
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 37 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 3690 -j ACCEPT
#-A INPUT -s 192.168.10.72/32 -p tcp -m tcp --sport 20 -j ACCEPT
#-A INPUT -s 192.168.10.72/32 -p tcp -m tcp --sport 21 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --sport 20 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --sport 21 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 20 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 5001:5010 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 443 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --sport 443 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 137 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 138 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 445 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 111 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 111 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 2049 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 2049 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 32766:32769 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 32766:32769 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 69 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 3001:3010 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 3389 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 37 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 3690 -j ACCEPT
#-A OUTPUT -d 192.168.10.72/32 -p tcp -m tcp --dport 20 -j ACCEPT
#-A OUTPUT -d 192.168.10.72/32 -p tcp -m tcp --dport 21 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --dport 20 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --dport 21 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 20 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 21 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 5001:5010 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --dport 443 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 8080 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p udp -m udp --sport 137 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p udp -m udp --sport 138 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 139 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 445 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 111 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p udp -m udp --sport 111 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 2049 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p udp -m udp --sport 2049 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 32766:32769 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p udp -m udp --sport 32766:32769 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p udp -m udp --sport 69 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p udp -m udp --sport 3001:3010 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --sport 3389 -j ACCEPT
COMMIT
# Completed on Tue Jan 14 15:03:16 2014
